petscreen update
Signed-off-by: Riley Licht <riley.e.licht@gmail.com>